# OpenMDAO

./: .bumpversion.cfg  .bumpversion.toml  .coveragerc  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .testflo  .travis.yml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.arm  LICENSE.txt  MANIFEST.in  README.md  ROADMAP.md  appveyor.yml  assembler.py  bandit.yml  cases.sql  deploy.rsa.enc  distributed_gradient_test.py  load_balancing.py  n2.html  n2_test.py  opt_report_template.html  package.json  percenttest.py  pixi.toml  problem.py  pyproject.toml  release_notes.md  release_notes.txt  requirements.txt  sample_test.py  server.py  setup.py  system.py  test.py  (+8 more)
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  actionlint.yaml  actionlint.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  misc_task.yml
.github/scripts/: get_poem_id.py  get_poem_message.py  install_latest_deps.sh
.github/workflows/: openmdao_archive_docs.yml  openmdao_audit.yml  openmdao_docs_workflow.yml  openmdao_docs_workflow_pixi.yml  openmdao_latest_workflow.yml  openmdao_test_workflow.yml  openmdao_test_workflow_pixi.yml  openmdao_update_poem.yml  publish-image.yml  release_workflow.yml  update_pixi_lockfile.yml
API/: __init__.py
assemblers/: assembler.py
benchmark/: benchmark_beam.py  benchmark_manycomps.py  benchmark_manyvars.py  benchmark_multipoint.py  benchmark_parallel_GA.py  benchmark_param_cycle.py  benchmark_trees.py  discrete_bench.py
coloring_files/: coloring_flight_dynamics_comp.pkl  total_coloring.pkl
core/: component.py  group.py  problem.py  system.py
notes/: OpenMDAO_API_discussion.rtf
openmdao/: .pylintrc  __init__.py  __main__.py  api.py  cases.sql  docutils.py  func_api.py  parallel_api.py  warnings.py
openmdao/approximation_schemes/: ApproximationScheme.py  FiniteDifference.py  approximation_scheme.py  complex_step.py  finite_difference.py
openmdao/assemblers/: assembler.py  default_assembler.py
openmdao/code_review/: openmdao_lint.py  test_common_problems.py  test_lint.py  test_lint2.py  test_lint3.py  test_lint4.py  test_lint_attributes.py  test_lint_docstrings.py  test_lint_peps.py  test_lint_returns.py
openmdao/components/: add_subtract_comp.py  akima_spline_comp.py  balance_comp.py  bsplines_comp.py  cross_product_comp.py  demux_comp.py  dense_nn_comp.py  deprecated_component.py  dot_product_comp.py  eq_constraint_comp.py  eq_constraints_comp.py  exec_comp.py  explicit_func_comp.py  explicit_jax_comp.py  external_code.py  external_code_comp.py  func_comp_common.py  funccomp.py  implicit_func_comp.py  input_resids_comp.py  interp.py  interp_base.py  jax_explicit_comp.py  jax_flax_comp.py  jax_implicit_comp.py  ks.py  ks_comp.py  linear_system_comp.py  matrix_vector_product_comp.py  meta_model.py  meta_model_semi_structured_comp.py  meta_model_structured.py  meta_model_structured_comp.py  meta_model_unstructured.py  meta_model_unstructured_comp.py  multifi_meta_model.py  multifi_meta_model_unstructured_comp.py  mux_comp.py  pytorchcomp.py  regular_grid_interp_comp.py  (+4 more)
openmdao/core/: SubproblemComp.py  analysis_error.py  component.py  configinfo.py  conn_graph.py  constants.py  cyclegroup.py  deprecated_component.py  driver.py  explicitcomponent.py  functional_callback.py  genetic_algorithm_driver_base.py  group.py  implicitcomponent.py  indepvarcomp.py  notebook_mode.py  notebook_utils.py  optimization_driver_base.py  parallel_group.py  problem.py  relevance.py  subgroup.py  system.py  total_jac.py  unnamedgroup.py
openmdao/devtools/: 1to2.py  ast_tools.py  bidirectional_jac.py  build_docs.py  check_pixi_lock.py  compat.py  compharness.py  create_feature_docs_unit_test_db.py  dataflow.py  debug.py  docutils.py  dump_sqlite_recorder_file.py  generate_derivative.py  html_utils.py  icicle.html  iprof_app.py  iprof_mem.py  iprof_utils.py  iprofile.py  iprofile_app.py  itrace.py  make_release_notes.py  memory.py  prof_utils.py  profile.py  run_test.py  testutil.py  tot_jac_builder.py  trace.py  viewconns.py  webview.py  wing_proj_template.wpr  wingproj.py  wingproj.wpr  wingproj6.wpr  xdsm_writer.py
openmdao/docs/: .coveragerc  Makefile  Makefile.nmake  README  README.md  api_translation.rst  build_all_docs.sh  build_docs.py  build_jupyter_book.py  build_source_docs.py  conf.py  config_params.py  copy_build_artifacts.py  debug_build_docs.py  display_source.py  execute_notebooks.py  index.rst  ipcluster_start.sh  jb_utils.py  readme.md  requirements.txt  upload_doc_version.py
openmdao/drivers/: analysis_driver.py  analysis_generator.py  analysis_generators.py  differential_evolution_driver.py  doe_driver.py  doe_generators.py  factorial_generators.py  full_factorial_generator.py  genetic_algorithm_driver.py  genetic_algorithm_driver_base.py  latin_hypercube_generator.py  modopt_driver.py  nlopt_driver.py  optimization_driver.py  optimization_driver_base.py  pyDOE_generator.py  pyDOE_generators.py  pymoo_driver.py  pyoptsparse_driver.py  scipy_optimizer.py  uniform_generator.py
openmdao/error_checking/: check_config.py  warnings.py
openmdao/func/: __init__.py  act_tanh.py  cs_safe.py  from_numpy.py  numpy.py  smooth.py
openmdao/jacobians/: assembled_jacobian.py  block_jacobian.py  compjacobian.py  default_jacobian.py  dense_jacobian.py  dictionary_jacobian.py  global_jacobian.py  jacobian.py  subjac.py
openmdao/jax/: __init__.py  ks.py  smooth.py
openmdao/jax_funcs/: __init__.py  ks.py
openmdao/math/: __init__.py  cs_safe.py  jax_functions.py  numpy.py  smooth.py
openmdao/matrices/: coo_matrix.py  csc_matrix.py  csr_matrix.py  dense_matrix.py  matrix.py
openmdao/proc_allocators/: default_allocator.py  proc_allocator.py
openmdao/recorders/: base_case_reader.py  base_recorder.py  case.py  case_new.py  case_reader.py  case_recorder.py  (+13 more)
proc_allocators/: proc_allocator.py
roadmaps/: 2020roadmap.md  2021roadmap.md  2022roadmap.md  2023roadmap.md  2025roadmap.md
solvers/: solver.py
tests/: general_problem.py  test1.py  test2.py  test3.py
vectors/: transfer.py  vector.py
(+2130 files in other folders)
